# Talento

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: bench.hpp  bitboard.hpp  board.hpp  evaluation.hpp  magic.hpp  movegen.hpp  movelist.hpp  moveorder.hpp  search.hpp  tt.hpp  uci.hpp  utils.hpp
